Fixed error with main causing loading section on mobile to exceed 100% width

--- a/Css/main.css
+++ b/Css/main.css
@@ -55,7 +55,7 @@ body,
 	height: 100%;
 }
 section {
-	width: 100%;
+	width: 100vw;
 	min-height: 100vh;
 	position: relative;
 	overflow: hidden;
